force-app/main/default/objects/RetireExpectedPerson__c/RetireExpectedPerson__c.object-meta.xml
<CustomObject>
    <label>退職予定者</label>
    <nameField>
        <label>退職予定者名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>