force-app/main/default/objects/RetireExpectedPerson__c/fields/IsRemoteAccessEnable__c.field-meta.xml
<CustomField>
    <fullName>IsRemoteAccessEnable__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>在宅非表示フラグ_申入</label>
    <type>Text</type>
</CustomField>