force-app/main/default/objects/RetireExpectedPerson__c/fields/LastGoingToWorkDate__c.field-meta.xml
<CustomField>
    <fullName>LastGoingToWorkDate__c</fullName>
    <label>最終出社日</label>
    <type>Date</type>
</CustomField>