force-app/main/default/objects/RetireExpectedPerson__c/fields/ProcessResult__c.field-meta.xml
<CustomField>
    <fullName>ProcessResult__c</fullName>
    <label>処理結果</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>