force-app/main/default/objects/RetireExpectedPerson__c/fields/RetireReson__c.field-meta.xml
<CustomField>
    <fullName>RetireReson__c</fullName>
    <label>退職理由</label>
    <type>TextArea</type>
</CustomField>