force-app/main/default/objects/RetireExpectedPerson__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AccountId__c</columns>
    <columns>EmployeeNo__c</columns>
    <columns>RetireDate__c</columns>
    <columns>RetireReson__c</columns>
    <columns>ProcessResult__c</columns>
    <columns>EmployeeNoError__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>